--- a/.gitignore
+++ b/.gitignore
@@ -1,19 +1,19 @@
 # macOS system files
-.DS_Store
-.AppleDouble
-.LSOverride
+*.DS_Store
+*.AppleDouble
+*.LSOverride
 
 # Icon files on custom volumes
 Icon?
 
 # Spotlight and metadata
-.Spotlight-V100
-.Trashes
-.fseventsd
-.TemporaryItems
+*.Spotlight-V100
+*.Trashes
+*.fseventsd
+*.TemporaryItems
 
 # macOS volume-specific hidden files
-.VolumeIcon.icns
+*.VolumeIcon.icns
 
 # Other possible Apple metadata on external drives
-.apdisk
+*.apdisk
